--- a/index.html
+++ b/index.html
@@ -66,85 +66,18 @@
 </div>
 </div>
 <div class="page-content header-clear-larger">
-<div class="single-slider owl-carousel owl-no-dots bottom-50">
-<div class="item shadow-large round-element">
-<img width="700" src="images\pictures\10lq.jpg" data-src-retina="images/pictures/10.jpg">
-<div class="above-overlay cover-content-bottom">
-<h1 class="center-text uppercase ultrabold color-white bottom-0">Meet SG</h1>
-<p class="color-white bottom-0 center-text font-12 opacity-80">
-A gorgeous User Interface and User Experience
-</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
-</div>
-<div class="item shadow-large round-element">
-<img width="700" class="owl-lazy" src="images\empty.png" data-src="images/pictures/7lq.jpg" data-src-retina="images/pictures/7.jpg">
-<div class="above-overlay cover-content-bottom">
-<h4 class="center-text uppercase ultrabold color-white bottom-0">It's nice to meet you!</h4>
-<p class="color-white bottom-0 center-text font-12 opacity-80">
-Let's get you started on beauty and creativity.
-</p>
-</div>
-<div class="overlay overlay-gradient"></div>
-</div>
-<div class="item shadow-large round-element">
-<img width="700" class="owl-lazy" src="images\empty.png" data-src="images/pictures/8lq.jpg" data-src-retina="images/pictures/8.jpg">
-<div class="above-overlay cover-content-bottom">
-<h4 class="center-text uppercase ultrabold color-white bottom-0">We have a tone of features!</h4>
-<p class="color-white bottom-0 center-text font-12 opacity-80">
-And they're incredibly easy to use!
-</p>
-</div>
-<div class="overlay overlay-gradient"></div>
-</div>
-</div>
-<a href="#" class="overlay-button shadow-large button button-s button-round button-red button-center-medium uppercase ultrabold">Purchase Today - $21</a>
 <div class="content-box shadow-large bg-white">
-<div class="top-25 bottom-15">
+  <div class="top-25 bottom-15">
 <h3 class="bottom-10">Welcome<i class="fa fa-star float-right top-0 color-yellow-light"></i></h3>
 <p class="bottom-20">
-SG is a very powerful, very fast loading, simple to use Mobile Template designed using a modern color scheme to obtain a gorgeous user experience.
+SG is a very powerful AIIT company, One roof where you will find all types of solutions. Hardware, Softwhere, Security, Smart Home & Offices just think and we serve. Everything works better when it’s all Under One Roof.  By bringing together all of your suppliers, you can reap massive savings in both costs & efficiency.  Our members are used to working hand in hand, so we can bring you faster,  leaner products & services to power your estate agency business.
 </p>
 <div class="decoration opacity-50 bottom-10"></div>
 <a href="#" class="center-text uppercase bold font-12">FIND OUT MORE <i class="left-10 font-11 fa fa-arrow-right"></i></a>
 </div>
 </div>
-<div class="home-thumb-slider owl-carousel bottom-20">
-<div class="item round-element shadow-large">
-<img class="shadow-large owl-lazy" src="images\empty.png" data-src="images/pictures/10l.jpg" alt="img">
-<div class="above-overlay cover-content-bottom">
-<h3 class="center-text uppercase ultrabold color-white bottom-0">Flatlay</h3>
-<p class="center-text bottom-20 font-11">Beautifuly Organized.</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
-</div>
-<div class="item round-element shadow-large">
-<img class="shadow-large owl-lazy" src="images\empty.png" data-src="images/pictures/9l.jpg" alt="img">
-<div class="above-overlay cover-content-bottom">
-<h3 class="center-text uppercase ultrabold color-white bottom-0">Sidelay</h3>
-<p class="center-text bottom-20 font-11">Creative & Colorful.</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
-</div>
-<div class="item round-element shadow-large">
-<img class="shadow-large owl-lazy" src="images\empty.png" data-src="images/pictures/3l.jpg" alt="img">
-<div class="above-overlay cover-content-bottom">
-<h3 class="center-text uppercase ultrabold color-white bottom-0">Cookies</h3>
-<p class="center-text bottom-20 font-11">Always Delicious!</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
-</div>
-<div class="item round-element shadow-large">
-<img class="shadow-large owl-lazy" src="images\empty.png" data-src="images/pictures/4l.jpg" alt="img">
-<div class="above-overlay cover-content-bottom">
-<h3 class="center-text uppercase ultrabold color-white bottom-0">Spices</h3>
-<p class="center-text bottom-20 font-11">Missing Ingredient</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
-</div>
-</div>
 <div class="content-box shadow-large bg-white">
-<div class="top-25 bottom-35">
+  <div class="top-25 bottom-35">
 <h3 class="bottom-10">Features you'll Love<i class="fa fa-heart float-right top-0 color-red-light"></i></h3>
 <p class="bottom-30">
 Filled with easy to use, copy and paste features, made for all users with incredible & flexible control.
@@ -193,19 +126,6 @@ We've love our customers and our customers love us. Here are some of their aweso
 <a href="#" class="button-dummy center-text">Profuzion | Envato Buyer</a>
 </div>
 </div>
-</div>
-</div>
-<div class="content">
-<em class="content-ribbon gradient-green-dark color-white">Featured Project</em>
-<div class="shadow-large round-element">
-<img class="responsive-image preload-image" src="images\empty.png" data-src="images/pictures/10.jpg" alt="img">
-<div class="above-overlay cover-content-bottom">
-<h1 class="center-text color-white uppercase ultrabold bottom-0">UltraMobile</h1>
-<p class="color-white bottom-15 center-text font-12 opacity-80">
-Meet our best selling product! Get it today! It's awesome!
-</p>
-</div>
-<div class="overlay overlay-gradient-large"></div>
 </div>
 </div>
 <a href="#" class="overlay-button shadow-large button button-s button-round button-green button-center-medium uppercase ultrabold">Purchase Today - $21</a>
