--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 ﻿<!DOCTYPE HTML>
 <html lang="en">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<title>SG | HTML, CSS & JS Mobile Template | Epsilon X </title>
+<link rel="stylesheet" type="text/css" href="fonts\css\fontawesome-all.min.css">
+<link rel="stylesheet" type="text/css" href="styles\framework.css">
+<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+</head>
+<body>
+
 <div id="page-transitions" class="page-build">
 <div class="page-bg gradient-body-1"></div>
 <div class="header shadow-large header-light header-logo-app">
