--- a/Apps_Store.html
+++ b/Apps_Store.html
@@ -9,6 +9,12 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
+<div id="preloader" class="preloader-light">
+<h1 class="center-text color-black ultrabold uppercase bottom-0 fa-2x">SG</h1>
+<div id="preload-spinner"></div>
+<p>Beautifully Crafted UI & UX.</p>
+<em>This will only take a second. It's totally worth it!</em>
+</div>
 <div id="page-transitions" class="page-build">
 <div class="page-bg gradient-body-1"></div>
 <div class="header shadow-large header-light header-logo-app">
@@ -23,45 +29,23 @@
 <div class="menu-scroll">
 <div class="menu-header">
 <a class="menu-logo" href="index.html"></a>
-<h1>Welcome</h1>
+<h1>SG Apps</h1>
 <p>Put a little color in your life</p>
 </div>
 <div class="menu-list icon-background-active">
 <em class="menu-divider top-10">Navigation</em>
-<a class="menu-item" href="index.html"><i class="fa gradient-red-light fa-star"></i>Welcome</a>
-<a class="menu-item" href="homepages.html"><i class="fa gradient-green-light fa-home"></i>Homepages</a>
-<a class="menu-item active-menu" href="Apps_Store.html"><i class="fa gradient-sky-light fa-cog"></i>Apps Store<span>HOT</span></a>
+<a class="menu-item active-menu" href="index.html"><i class="fa gradient-red-light fa-star"></i>Home</a>
+<a class="menu-item" href="Apps_Store.html"><i class="fa gradient-sky-light fa-cog"></i>Apps Store<span>HOT</span></a>
 <a class="menu-item" href="OTA.html"><i class="fa gradient-mint-dark fa-hand-point-right"></i>OTA<span>NEW</span></a>
-<a data-submenu="submenu-1" class="menu-item" href="#"><i class="fa gradient-magenta-light fa-image"></i>Media<span></span></a>
-<div id="submenu-1" class="submenu">
-<a href="galleries.html">Galleries</a>
-<a href="portfolios.html">Portfolios</a>
-</div>
-<a class="menu-item" href="pages.html"><i class="fa gradient-brown-light fa-file"></i>Site Pages</a>
-<a class="menu-item" href="pageapp.html"><i class="fa gradient-blue-light fa-mobile-alt"></i>App Styled</a>
-<a data-submenu="submenu-2" class="menu-item" href="#"><i class="fa gradient-mint-dark fa-shopping-bag"></i>Templates<span></span></a>
-<div id="submenu-2" class="submenu">
-<a href="news.html">News</a>
-<a href="shop.html">Shop</a>
-<a href="blog.html">Blog</a>
-</div>
-<a class="menu-item" href="contact.html"><i class="fa gradient-sky-dark fa-envelope"></i>Contact Us</a>
-<a class="menu-item close-menu" href="#"><i class="fa gradient-red-dark fa-times"></i>Close Menu</a>
-<em class="menu-divider">Get in Touch</em>
-<a class="menu-item" href="tel:+1 234 567 890"><i class="fa gradient-green-light fa-phone"></i>Call Us</a>
-<a class="menu-item" href="sms:+1 234 567 890"><i class="fa gradient-mint-dark fa-comment"></i>SMS Us</a>
-<a class="menu-item" href="mailto:name@domain.com"><i class="fa gradient-sky-dark fa-envelope"></i>Mail Us</a>
 <em class="menu-divider">Let's get Social</em>
 <a class="menu-item" href="https://www.facebook.com/enabled.labs/"><i class="fab facebook-bg fa-facebook-f"></i>Facebook</a>
 <a class="menu-item" href="https://twitter.com/iEnabled"><i class="fab twitter-bg fa-twitter"></i>Twitter</a>
 <a class="menu-item" href="https://plus.google.com/u/1/+EnabledLabs"><i class="fab google-bg fa-google-plus-g"></i>Google+</a>
 </div>
-<em class="menu-copyright">Copyright <span class="copyright-year"></span>, Enabled. All Rights Reserved</em>
+<em class="menu-copyright">Copyright <span class="copyright-year"></span>, SG. All Rights Reserved</em>
 </div>
-</div>
-	
+</div>	
 <div class="page-content header-clear-large">	
-	
 <div class="content">
 <em class="content-ribbon gradient-red-dark color-white">Powered by ME</em>
 <div class="shadow-large round-element">
@@ -76,7 +60,6 @@ Oneplus Camera app.
 </div>
 </div>
 <a href="https://www.apkmirror.com/apk/oneplus-ltd/oneplus-camera/oneplus-camera-2-5-34-release/oneplus-camera-2-5-34-android-apk-download/download/" class="overlay-button shadow-large button button-s button-round button-red button-center-medium uppercase ultrabold">Download</a>	
-
 <div class="content">
 <em class="content-ribbon gradient-red-dark color-white">Powered by ME</em>
 <div class="shadow-large round-element">
@@ -188,21 +171,11 @@ QucikPic one of the Best Gallery App.
 Components are just copy and paste elements. Flexible, easy to use and incredibly fast loading to create gorgeous pages.
 </p>
 </div>
-<div class="footer footer-detached shadow-large footer-light">
-  <a href="#" class="footer-logo"></a>
-  <strong>Built with <i class="fas fa-heart color-red-light"></i> by SG</strong>
-  <p class="footer-text">
-Simplicity and power packed into a beautiful, feature filled, fast, mobile template.
-</p>
-<div class="footer-socials">
-<a href="https://github.com/Shahabkhan99"><i class="icon-shadow bg-black fab fa-github font-30"></i></a>
-<a href="https://t.me/joinchat/MmifzBVKw_RzEzNJMRteJg"><i class="icon-shadow twitter-bg fab fa-telegram-plane font-30"></i></a>
-<a href="#"><i class="icon-shadow google-bg fab fa-google-plus-g font-30"></i></a>
-<a href="#" data-menu-type="menu-box-bottom" data-menu="menu-share"><i class="icon-shadow instagram-bg fas fa-share-alt font-30"></i></a>
-<a href="#" data-menu-type="menu-box-bottom" data-menu="menu-phone"><i class="icon-shadow bg-green-dark fas fa-phone font-30"></i></a>
-</div>
-<p class="footer-links"><a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a> | <a href="#" class="back-to-top"> Back to Top</a></p>
-<p class="footer-copyright">&copy; SG <span class="copyright-year"></span>. All rights reserved.</p>
+<div class="footer footer-detached shadow-large footer-light"> <a href="#" class="footer-logo"></a> <strong>Built with <i class="fas fa-heart color-red-light"></i> by SG</strong>
+  <p class="footer-text"> Follow us on any of below channel</p>
+  <div class="footer-socials"> <a href="https://github.com/Shahabkhan99"><i class="icon-shadow bg-black fab fa-github font-30"></i></a> <a href="https://t.me/joinchat/MmifzBVKw_RzEzNJMRteJg"><i class="icon-shadow twitter-bg fab fa-telegram-plane font-30"></i></a> <a href="#"><i class="icon-shadow google-bg fab fa-google-plus-g font-30"></i></a> <a href="#" data-menu-type="menu-box-bottom" data-menu="menu-share"><i class="icon-shadow instagram-bg fas fa-share-alt font-30"></i></a> <a href="#" data-menu-type="menu-box-bottom" data-menu="menu-phone"><i class="icon-shadow whatsapp-bg fab fa-whatsapp font-30"></i></a> </div>
+  <p class="footer-links"><a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a> | <a href="#" class="back-to-top"> Back to Top</a></p>
+  <p class="footer-copyright">&copy; SG <span class="copyright-year"></span>. All rights reserved.</p>
 </div>
 </div>
 <div id="menu-contact" data-menu-height="460" class="menu menu-box-modal bg-white shadow-large">
@@ -229,7 +202,7 @@ We usually reply in less than 24 hours. <br> Thank you for getting in touch with
 <div class="formValidationError" id="contactMessageTextareaError"></div>
 <div class="formFieldWrap">
 <label class="field-title contactNameField" for="contactNameField"></label>
-<input type="text" name="contactNameField" placeholder="John Doe" value="" class="contactField requiredField" id="contactNameField">
+<input type="text" name="contactNameField" placeholder="Name" value="" class="contactField requiredField" id="contactNameField">
 </div>
 <div class="formFieldWrap">
 <label class="field-title contactEmailField" for="contactEmailField"></label>
@@ -310,23 +283,23 @@ You can setup awesome notifications in a menu as well, add useful news and info 
 <div class="phone-boxes top-20">
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-user bg-blue-dark"></i>
-<em>John Doe</em>
+<em>Shahab Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-briefcase bg-green-dark"></i>
-<em>Office</em>
+<em>Gulbaz Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-life-ring font-24 bg-orange-dark"></i>
-<em>Support</em>
+<em>Hashim Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <div class="clear"></div>
 </div>
 <div class="decoration opacity-50 bottom-10"></div>
-<p class="center-text font-10 small-line-height top-10">Monday - Friday | 09:00 AM to 10:00 PM</p>
+<p class="center-text font-10 small-line-height top-10">Sunday - Thursday | 09:00 AM to 10:00 PM</p>
 </div>
 <div id="menu-share" data-menu-height="375" class="menu menu-box-bottom bg-white">
 <h1 class="center-text top-20 bottom-0 uppercase ultrabold">Sharing the Love</h1>
