--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 </head>
 <body>
-
+<div id="preloader" class="preloader-light">
+<h1 class="center-text color-black ultrabold uppercase bottom-0 fa-2x">SG</h1>
+<div id="preload-spinner"></div>
+<p>Beautifully Crafted UI & UX.</p>
+<em>This will only take a second. It's totally worth it!</em>
+</div>
 <div id="page-transitions" class="page-build">
 <div class="page-bg gradient-body-1"></div>
 <div class="header shadow-large header-light header-logo-app">
@@ -24,40 +29,23 @@
 <div class="menu-scroll">
 <div class="menu-header">
 <a class="menu-logo" href="index.html"></a>
-<h1>Welcome</h1>
+<h1>SG Apps</h1>
 <p>Put a little color in your life</p>
 </div>
 <div class="menu-list icon-background-active">
 <em class="menu-divider top-10">Navigation</em>
-<a class="menu-item active-menu" href="index.html"><i class="fa gradient-red-light fa-star"></i>Welcome</a>
-<a class="menu-item" href="homepages.html"><i class="fa gradient-green-light fa-home"></i>Homepages</a>
+<a class="menu-item active-menu" href="index.html"><i class="fa gradient-red-light fa-star"></i>Home</a>
+
 <a class="menu-item" href="Apps_Store.html"><i class="fa gradient-sky-light fa-cog"></i>Apps Store<span>HOT</span></a>
 <a class="menu-item" href="OTA.html"><i class="fa gradient-mint-dark fa-hand-point-right"></i>OTA<span>NEW</span></a>
-<a data-submenu="submenu-1" class="menu-item" href="#"><i class="fa gradient-magenta-light fa-image"></i>Media<span></span></a>
-<div id="submenu-1" class="submenu">
-<a href="galleries.html">Galleries</a>
-<a href="portfolios.html">Portfolios</a>
-</div>
-<a class="menu-item" href="pages.html"><i class="fa gradient-brown-light fa-file"></i>Site Pages</a>
-<a class="menu-item" href="pageapp.html"><i class="fa gradient-blue-light fa-mobile-alt"></i>App Styled</a>
-<a data-submenu="submenu-2" class="menu-item" href="#"><i class="fa gradient-mint-dark fa-shopping-bag"></i>Templates<span></span></a>
-<div id="submenu-2" class="submenu">
-<a href="news.html">News</a>
-<a href="shop.html">Shop</a>
-<a href="blog.html">Blog</a>
-</div>
-<a class="menu-item" href="contact.html"><i class="fa gradient-sky-dark fa-envelope"></i>Contact Us</a>
-<a class="menu-item close-menu" href="#"><i class="fa gradient-red-dark fa-times"></i>Close Menu</a>
-<em class="menu-divider">Get in Touch</em>
-<a class="menu-item" href="tel:+1 234 567 890"><i class="fa gradient-green-light fa-phone"></i>Call Us</a>
-<a class="menu-item" href="sms:+1 234 567 890"><i class="fa gradient-mint-dark fa-comment"></i>SMS Us</a>
-<a class="menu-item" href="mailto:name@domain.com"><i class="fa gradient-sky-dark fa-envelope"></i>Mail Us</a>
+
+
 <em class="menu-divider">Let's get Social</em>
 <a class="menu-item" href="https://www.facebook.com/enabled.labs/"><i class="fab facebook-bg fa-facebook-f"></i>Facebook</a>
 <a class="menu-item" href="https://twitter.com/iEnabled"><i class="fab twitter-bg fa-twitter"></i>Twitter</a>
 <a class="menu-item" href="https://plus.google.com/u/1/+EnabledLabs"><i class="fab google-bg fa-google-plus-g"></i>Google+</a>
 </div>
-<em class="menu-copyright">Copyright <span class="copyright-year"></span>, Enabled. All Rights Reserved</em>
+<em class="menu-copyright">Copyright <span class="copyright-year"></span>, SG. All Rights Reserved</em>
 </div>
 </div>
 <div class="page-content header-clear-larger">
@@ -73,68 +61,13 @@ SG is a very powerful AIIT company, One roof where you will find all types of so
 </div>
 <div class="content-box shadow-large bg-white">
   <div class="top-25 bottom-35">
-<h3 class="bottom-10">Features you'll Love<i class="fa fa-heart float-right top-0 color-red-light"></i></h3>
-<p class="bottom-30">
-Filled with easy to use, copy and paste features, made for all users with incredible & flexible control.
-</p>
-<div class="decoration opacity-50"></div>
-<div class="icon-column">
-<h1 class="font-17 bottom-0 regularbold">Power & Flexibility</h1>
-<i class="fa fa-cog gradient-sky-light color-white shadow-icon-large"></i>
-<p>
-It's flexible, easy to use and very user friendly.
-</p>
-</div>
-<div class="icon-column">
-<h1 class="font-17 bottom-0 regularbold">Built for Everyone</h1>
-<i class="fa fa-user gradient-red-light color-white shadow-icon-large"></i>
-<p>
-Our code is simple, built for everyone to enjoy.
-</p>
-</div>
-<div class="icon-column">
-<h1 class="font-17 bottom-0 regularbold">Hands on Support</h1>
-<i class="fa fa-file gradient-green-dark color-white shadow-icon-large"></i>
-<p>
-We love our customers, and we're always here for you.
-</p>
-</div>
-</div>
-</div>
-<div class="content-box shadow-large bg-white">
-<div class="top-25 bottom-25">
-<h3 class="bottom-10">Testimonials<i class="fa fa-quote-left float-right top-0 color-green-light"></i></h3>
-<p>
-We've love our customers and our customers love us. Here are some of their awesome reviews.
-</p>
-<div class="single-slider owl-carousel owl-no-dots">
-<div class="blockquote-3">
-<div class="blockquote-rating">
-<i class="fa fa-star color-yellow-dark"></i>
-<i class="fa fa-star color-yellow-dark"></i>
-<i class="fa fa-star color-yellow-dark"></i>
-<i class="fa fa-star color-yellow-dark"></i>
-<i class="fa fa-star color-yellow-dark"></i>
-</div>
-<div class="clear"></div>
-<p>You can't go wrong with this template. Author has outstanding code quality and amazing support to boot. Will never leave you hanging. Get this now!</p>
-<a href="#" class="button-dummy center-text">Profuzion | Envato Buyer</a>
-</div>
-</div>
-</div>
-</div>
-<a href="#" class="overlay-button shadow-large button button-s button-round button-green button-center-medium uppercase ultrabold">Purchase Today - $21</a>
-<div class="content-box shadow-large bg-white">
-<div class="top-25 bottom-35">
-<h3 class="bottom-10">Recent Works<i class="fa fa-star float-right top-0 color-yellow-light"></i></h3>
-<p class="bottom-30">
-Check out our most recent products. You can even filter them with great ease.
-</p>
-<ul class="gallery-filter-controls">
+    <h3 class="bottom-10">Recent Projects<em class="fa fa-star float-right top-0 color-yellow-light"></em></h3>
+    <p class="bottom-30"> Check out our most recent projects.</p>
+    <ul class="gallery-filter-controls">
 <li class="gallery-filter-active color-blue-dark gallery-filter-all" data-filter="all">All</li>
-<li data-filter="2">Tech</li>
-<li data-filter="1">Food</li>
-<li data-filter="3">Nature</li>
+<li data-filter="2">Security</li>
+<li data-filter="1">Harware</li>
+<li data-filter="3">Software</li>
 </ul>
 <div class="gallery gallery-rounded gallery-filter gallery-filter-three">
 <a href="images\pictures\2t.jpg" class="show-gallery filtr-item" title="Cream Pie" data-category="1">
@@ -162,15 +95,13 @@ Check out our most recent products. You can even filter them with great ease.
 	<div class="footer footer-detached shadow-large footer-light">
   <a href="#" class="footer-logo"></a>
   <strong>Built with <i class="fas fa-heart color-red-light"></i> by SG</strong>
-  <p class="footer-text">
-Simplicity and power packed into a beautiful, feature filled, fast, mobile template.
-</p>
-<div class="footer-socials">
+  <p class="footer-text"> Follow us on any of below channel</p>
+  <div class="footer-socials">
 <a href="https://github.com/Shahabkhan99"><i class="icon-shadow bg-black fab fa-github font-30"></i></a>
 <a href="https://t.me/joinchat/MmifzBVKw_RzEzNJMRteJg"><i class="icon-shadow twitter-bg fab fa-telegram-plane font-30"></i></a>
 <a href="#"><i class="icon-shadow google-bg fab fa-google-plus-g font-30"></i></a>
 <a href="#" data-menu-type="menu-box-bottom" data-menu="menu-share"><i class="icon-shadow instagram-bg fas fa-share-alt font-30"></i></a>
-<a href="#" data-menu-type="menu-box-bottom" data-menu="menu-phone"><i class="icon-shadow bg-green-dark fas fa-phone font-30"></i></a>
+<a href="#" data-menu-type="menu-box-bottom" data-menu="menu-phone"><i class="icon-shadow whatsapp-bg fab fa-whatsapp font-30"></i></a>
 </div>
 <p class="footer-links"><a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a> | <a href="#" class="back-to-top"> Back to Top</a></p>
 <p class="footer-copyright">&copy; SG <span class="copyright-year"></span>. All rights reserved.</p>
@@ -199,7 +130,7 @@ We usually reply in less than 24 hours. <br> Thank you for getting in touch with
 <div class="formValidationError" id="contactMessageTextareaError"></div>
 <div class="formFieldWrap">
 <label class="field-title contactNameField" for="contactNameField"></label>
-<input type="text" name="contactNameField" placeholder="John Doe" value="" class="contactField requiredField" id="contactNameField">
+<input type="text" name="contactNameField" placeholder="Name" value="" class="contactField requiredField" id="contactNameField">
 </div>
 <div class="formFieldWrap">
 <label class="field-title contactEmailField" for="contactEmailField"></label>
@@ -243,10 +174,9 @@ SG includes 9 Gradients for you to enjoy.<br>It's easy to edit or create more.
 </div>
 </div>
 </div>
-<div id="menu-bell" data-menu-height="425" class="menu menu-box-top bg-white">
-<a href="#" class="bell-item">
+<div id="menu-bell" data-menu-height="425" class="menu menu-box-top bg-white"> <a href="#" class="bell-item">
 <img class="preload-image shadow-icon-large" src="images\empty.png" data-src="images/pictures_people/4s.png">
-<strong>SG is Awesome</strong><span class="bg-green2-dark">FRESH</span>
+<strong>Android Projects</strong><span class="bg-green2-dark">FRESH</span>
 <em>
 You can setup awesome notifications in a menu as well, add useful news and info here.
 </em>
@@ -280,23 +210,23 @@ You can setup awesome notifications in a menu as well, add useful news and info 
 <div class="phone-boxes top-20">
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-user bg-blue-dark"></i>
-<em>John Doe</em>
+<em>Shahab Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-briefcase bg-green-dark"></i>
-<em>Office</em>
+<em>Gulbaz Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <a href="tel:(234) 567 890" class="phone-box">
 <i class="shadow-icon-large fa fa-life-ring font-24 bg-orange-dark"></i>
-<em>Support</em>
+<em>Hashim Khan</em>
 <strong>(234) 567 890</strong>
 </a>
 <div class="clear"></div>
 </div>
 <div class="decoration opacity-50 bottom-10"></div>
-<p class="center-text font-10 small-line-height top-10">Monday - Friday | 09:00 AM to 10:00 PM</p>
+<p class="center-text font-10 small-line-height top-10">Sunday - Thursday | 09:00 AM to 10:00 PM</p>
 </div>
 <div id="menu-share" data-menu-height="375" class="menu menu-box-bottom bg-white">
 <h1 class="center-text top-20 bottom-0 uppercase ultrabold">Sharing the Love</h1>
